# EvoScript

./: CMakeLists.txt  README.md  main.cpp  main2.cpp
Core/: CMakeLists.txt  EvoScript.cxx
Core/inc/EvoScript/: IState.h  LinuxState.hpp  Script.h  Typedefs.h  Win32State.hpp  macros.h
Core/inc/EvoScript/Compilation/: AddressTableGen.h  CMakeCodeGen.h  Casting.h  Compiler.h  EvoClass.h  Method.h  Typedefs.h
Core/inc/EvoScript/Tools/: Debug.h  ESAny.h  FileSystem.h  Finder.h  HashUtils.h  MD5Hash.h  NonCopyable.h  Randomizer.h  SetUtils.h  StringUtils.h
Core/src/EvoScript/: Compiler.cpp  IState.cpp  Script.cpp
Core/src/EvoScript/Compilation/: AddressTableGen.cpp  CMakeCodeGen.cpp  Casting.cpp  Compiler.cpp  Method.cpp
Examples/: main3.cpp  main4.cpp
Examples/Scripts/Example-Source/: CMakeLists.txt  Example.cpp
Examples/Scripts/Example2-Source/: CMakeLists.txt  Example.cpp
UnitTests/: main2.cpp
UnitTests/Scripts/BehaviourTest/: BehaviourTest.cpp  BehaviourTest.h  CMakeLists.txt
UnitTests/Scripts/Example-Source/: CMakeLists.txt  Example.cpp
UnitTests/Scripts/Example2-Source/: CMakeLists.txt  Example.cpp
UnitTests/Scripts/Test-Source/: CMakeLists.txt  Test.cpp
